tests/ui/conditional-compilation/test-cfg.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/test-cfg.rs:8:5
   |
LL |     foo();
   |     ^^^ not found in this scope
   |
note: found an item that was configured out
  --> $DIR/test-cfg.rs:5:4
   |
LL | fn foo() {}
   |    ^^^
note: the item is gated here
  --> $DIR/test-cfg.rs:3:16
   |
LL | #[cfg(all(foo, bar))] // foo AND bar
   |                ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
